--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
         "react"
     ],
     "rules": {
+        "react/prop-types": 0,
         "indent": [
             "error",
             2,
