--- a/.gitstatsignore
+++ b/.gitstatsignore
@@ -2,3 +2,6 @@
 /public/data/git_contributions.json
 /public/data/git_contributions.pretty.json
 /public/CNAME
+/package-lock.json
+/package.json
+/README.md
