--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+        "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
+  },
   "devDependencies": {
     "babel-preset-flow": "^6.23.0",
     "eslint": "^4.19.1",
@@ -31,6 +38,8 @@
     "eslint-plugin-react": "^7.9.1",
     "eslint-plugin-standard": "^3.1.0",
     "flow-bin": "^0.74.0",
-    "gh-pages": "^1.2.0"
+    "gh-pages": "^1.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "react-test-renderer": "^16.4.1"
   }
 }
