--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "flow": "./node_modules/.bin/flow",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
