Make lint deploy-blocking.

--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "flow": "./node_modules/.bin/flow",
+    "lint": "eslint src/",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.3",
     "babel-preset-flow": "^6.23.0",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-flowtype": "^2.49.3",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
