--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,9 @@
       "eslint:recommended",
       "plugin:react/recommended"
     ],
+    "globals": {
+      "SyntheticInputEvent": true
+    },
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaFeatures": {
