--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "private": true,
   "dependencies": {
     "array-intersection": "^0.1.2",
-    "d3": "^5.4.0",
+    "d3": "^5.9.1",
     "in-array": "^0.1.2",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "react-timeago": "^4.1.9"
+    "react-scripts": "2.1.8",
+    "react-timeago": "^4.4.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -24,19 +24,25 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "~9.0.0",
     "babel-preset-flow": "^6.23.0",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-flowtype": "^2.49.3",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-react": "^7.9.1",
-    "eslint-plugin-standard": "^3.1.0",
-    "flow-bin": "^0.74.0",
-    "gh-pages": "^1.2.0",
+    "eslint": "5.12.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-flowtype": "^3.4.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-standard": "^4.0.0",
+    "flow-bin": "^0.94.0",
+    "gh-pages": "^2.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "react-test-renderer": "^16.4.1"
-  }
+    "react-test-renderer": "^16.8.4"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
